chore(frontend): resolve z-index style issue

--- a/frontend/src/styles/components/Tile.module.scss
+++ b/frontend/src/styles/components/Tile.module.scss
@@ -41,7 +41,7 @@
     .overlay {
         margin-top: -16px;
         margin-left: 0px;
-        z-index: 999;
+        z-index: 1;
     }
 }
 
